--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,7 @@
 \usepackage{tablefootnote}
 \usepackage{tabulary}
 \usepackage{tcolorbox}
+\usepackage{textcomp}
 \usepackage{tikz}
 
 \usetikzlibrary{arrows,
